street-field in address-format in backend ui

--- a/station/index.html
+++ b/station/index.html
@@ -751,8 +751,13 @@
 				</div>
 
 				<div class="form-group col-md-12">
-					<label>Straße/Postfach</label>
-					<input type="text" class="form-control" placeholder="Adresse" ng-model="d.value.addr">
+					<label>Adresszeile</label>
+					<input type="text" class="form-control" placeholder="Adresszeile" ng-model="d.value.addr">
+				</div>
+
+				<div class="form-group col-md-12">
+					<label>Straße</label>
+					<input type="text" class="form-control" placeholder="Straße" ng-model="d.value.street">
 				</div>
 
 				<div class="form-group col-md-4">
