--- a/station/index.html
+++ b/station/index.html
@@ -42,13 +42,13 @@
 				<li ui-sref-active="active"><a href ui-sref="organisations">Organisationen</a></li>
 				<li ui-sref-active="active"><a href ui-sref="relations">Verbindungen</a></li>
 
-				<li class="dropdown" ng-if="loggedInUser.admin">
-					<a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Einstellungen <span class="caret"></span></a>
+				<li class="dropdown">
+					<a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mehr <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
 						<li class="active" ui-sref-active="active"><a href ui-sref="start">Start</a></li>
 						<li ui-sref-active="active"><a href ui-sref="whitelist">Whitelist</a></li>
-						<li ui-sref-active="active"><a href ui-sref="fields">Datenfelder</a></li>
-						<li ui-sref-active="active"><a href ui-sref="users">Benutzerinnen</a></li>
+						<li ui-sref-active="active" ng-if="loggedInUser.admin"><a href ui-sref="fields">Datenfelder</a></li>
+						<li ui-sref-active="active" ng-if="loggedInUser.admin"><a href ui-sref="users">Benutzerinnen</a></li>
 					</ul>
 				</li>
 			</ul>
