--- a/station/index.html
+++ b/station/index.html
@@ -679,9 +679,15 @@
                   }" ng-click="tableParams.sorting('format', tableParams.isSortBy('format', 'asc') ? 'desc' : 'asc')">Format
 				<span ng-class="{'fa-sort-asc':tableParams.isSortBy('format', 'asc'),'fa-sort-desc':tableParams.isSortBy('format', 'desc')}" class="fa"></span>
 			</th>
+
+
 			<th class="sortable" ng-class="{'sort-asc': tableParams.isSortBy('mode', 'asc'), 'sort-desc': tableParams.isSortBy('mode', 'desc')}"
 				ng-click="tableParams.sorting('mode', tableParams.isSortBy('mode', 'asc') ? 'desc' : 'asc')">Typ
 				<span ng-class="{'fa-sort-asc':tableParams.isSortBy('mode', 'asc'),'fa-sort-desc':tableParams.isSortBy('mode', 'desc')}" class="fa"></span>
+			</th>
+			<th class="sortable" ng-class="{'sort-asc': tableParams.isSortBy('default', 'asc'), 'sort-desc': tableParams.isSortBy('default', 'desc')}"
+				ng-click="tableParams.sorting('default', tableParams.isSortBy('default', 'asc') ? 'desc' : 'asc')">Typ
+				<span ng-class="{'fa-sort-asc':tableParams.isSortBy('default', 'asc'),'fa-sort-desc':tableParams.isSortBy('default', 'desc')}" class="fa"></span>
 			</th>
 			<th class="text-right">Aktionen</th>
 		</tr>
@@ -692,6 +698,7 @@
 			<td ng-bind="p.key"></td>
 			<td ng-bind="globals.fieldtypes[p.format]"></td>
 			<td ng-bind="p.mode"></td>
+			<td><span ng-if="p.default">Ja</span><span ng-if="!p.default">Nein</span></td>
 			<td>
 				<span class="btn-right" ng-click="remove(p)" title="Datenfeld löschen"><i class="fa fa-trash"></i></span>
 				<span class="btn-right" ui-sref='field({id: p._id})' title="Datenfeld bearbeiten"><i class="fa fa-edit"></i></span>
@@ -730,6 +737,13 @@
 						<option value="organisations">Organisationen</option>
 						<option value="relations">Verknüpfungen</option>
 					</select>
+				</div>
+				<div class="form-group col-md-12">
+					<div class="checkbox">
+						<label>
+							<input type="checkbox" ng-model="field.default"> Standard (Feld beim Neuanlegen von Entitäten automatisch eintragen)
+						</label>
+					</div>
 				</div>
 			</form>
 			<div class="pull-right">
@@ -1110,8 +1124,8 @@
 	</div>
 	<div class="modal-footer">
 		<button class="btn btn-primary" ng-click="ok()">
-				<span ng-if="!data.isNew">Aktualisieren</span>
-				<span ng-if="data.isNew">Anlegen</span>
+			<span ng-if="!data.isNew">Aktualisieren</span>
+			<span ng-if="data.isNew">Anlegen</span>
 		</button>
 		<button class="btn btn-warning" ng-click="cancel()">Abbruch</button>
 	</div>
