station: autocreate default data-fields on new entities/relations

--- a/station/index.html
+++ b/station/index.html
@@ -103,7 +103,7 @@
 	<div class="jumbotron">
 		<div class="row">
 			<div class="col-md-6">
-				<img src="/assets/images/lobbyradar.png">
+				<img src="/assets/images/lobbyradar.png" style="height: 230px">
 			</div>
 			<div class="col-md-6">
 				<h1>
@@ -112,6 +112,29 @@
 		</div>
 	</div>
 
+	<div class="row start">
+		<div class="col-lg-6">
+			<h4><a href ui-sref="organisations">Organisationen</a></h4>
+			<p><a href ui-sref="organisations">Die Liste der an Lobbyismus beteiligten Organisationen </a></p>
+
+			<h4><a href ui-sref="persons">Personen</a></h4>
+			<p><a href ui-sref="persons">Die Liste der an Lobbyismus beteiligten Personen</a></p>
+
+			<h4><a href ui-sref="relations">Verbindungen</a></h4>
+			<p><a href ui-sref="relations">Verbindungen zwischen Organisationen und Personen</a></p>
+		</div>
+
+		<div class="col-lg-6">
+			<h4><a href ui-sref="whitelist">Whitelist</a></h4>
+			<p><a href ui-sref="whitelist">Liste der Seiten auf denen das Lobbyradar-Plugin aktiv ist </a></p>
+
+			<h4><a href ui-sref="fields">Datenfelder</a></h4>
+			<p><a href ui-sref="fields">Definition der Ablage von Informationen</a></p>
+
+			<h4><a href ui-sref="users">Benutzerinnenverwaltung</a></h4>
+			<p><a href ui-sref="users">Zugänge zur Lobbyradarstation</a></p>
+		</div>
+	</div>
 </script>
 
 <script type="text/ng-template" id="partials/persons.html">
