station: fix table header name

--- a/station/index.html
+++ b/station/index.html
@@ -721,7 +721,7 @@
 				<span ng-class="{'fa-sort-asc':tableParams.isSortBy('mode', 'asc'),'fa-sort-desc':tableParams.isSortBy('mode', 'desc')}" class="fa"></span>
 			</th>
 			<th class="sortable" ng-class="{'sort-asc': tableParams.isSortBy('default', 'asc'), 'sort-desc': tableParams.isSortBy('default', 'desc')}"
-				ng-click="tableParams.sorting('default', tableParams.isSortBy('default', 'asc') ? 'desc' : 'asc')">Typ
+				ng-click="tableParams.sorting('default', tableParams.isSortBy('default', 'asc') ? 'desc' : 'asc')">Standard
 				<span ng-class="{'fa-sort-asc':tableParams.isSortBy('default', 'asc'),'fa-sort-desc':tableParams.isSortBy('default', 'desc')}" class="fa"></span>
 			</th>
 			<th class="text-right">Aktionen</th>
