--- a/station/index.html
+++ b/station/index.html
@@ -88,6 +88,7 @@
 							<button type="button" ng-class="{'active':params.count() == 25}" ng-click="params.count(25)" class="btn btn-default">25</button>
 							<button type="button" ng-class="{'active':params.count() == 50}" ng-click="params.count(50)" class="btn btn-default">50</button>
 							<button type="button" ng-class="{'active':params.count() == 100}" ng-click="params.count(100)" class="btn btn-default">100</button>
+							<button type="button" ng-class="{'active':params.count() == 500}" ng-click="params.count(500)" class="btn btn-default">500</button>
 						</div>
 					</td>
 				</tr>
